--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
-		<dependency>
+		  <dependency>
+                         <groupId>org.junit.jupiter</groupId>
+                         <artifactId>junit-jupiter</artifactId>
+                         <version>5.8.2</version>
+                         <scope>test</scope>
+                 </dependency>
+		 <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
