--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                          <version>5.8.2</version>
                          <scope>test</scope>
                  </dependency>
-		 <dependency>
+	         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -60,7 +60,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
-	</build>
+		        <plugin>
+                               <groupId>org.apache.maven.plugins</groupId>
+                               <artifactId>maven-surefire-plugin</artifactId>
+                               <version>2.22.2</version>
+                        </plugin>
+               </plugins>
+      </build>
 
 </project>
